--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+server.port=8085
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dine_ease
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+spring.jpa.show-sql=true
