--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,7 @@ jwt.token.secret.key=1e9f868bae7245927a646b18568aec918089925da577ddcb808f9775199
 jwt.token.secret.validity=300
 
 logging.level.org.springframework.web=trace
+logging.level.org.hiberante=trace
+logging.level.org.springframework.transaction=trace
+logging.level.org.springframework=trace
 
