--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ jwt.token.secret.key=1e9f868bae7245927a646b18568aec918089925da577ddcb808f9775199
 #5 minutes
 jwt.token.secret.validity=300
 
-logging.level.org.springframework.web=trace
+#logging.level.org.springframework.web=trace
 
