--- a/project-details/requirements.txt
+++ b/project-details/requirements.txt
@@ -79,7 +79,12 @@ Learning:
 		1. JOIN FETCH
 		2. Fetch.LAZY
 	11. Annotation based validation
-	12. Delete CASCADE food -> dish -> menu
+	12. Delete CASCADE 
+		food -> dish -> menu
+		restaurant -> branch   \
+		city -> branch ---------> branch_tables -> bookings
+		table_type ------------/
+	
 		
 Solving Booking:
 	1. Context branch_tables(table_id, count)
