--- a/project-details/requirements.txt
+++ b/project-details/requirements.txt
@@ -27,7 +27,7 @@
 	7. Add table
 
 5. Assumptions for simplicity
-	1. Each slot is for 1 hour
+	1. Each slot is for 1 hour at XX:00 to XX+1:00
 	2. Can book for any day
 	3. One owner per restaurant
 	4. Same menu at each branch
